# IndexerMcIndexFace

./: Cargo.toml  README.md
src/: main.rs
src/aux/: mod.rs
src/document_reader/: mod.rs
src/indexing/: avg_lengths.rs  indexer.rs  lengths.rs  mod.rs  postings.rs  stats.rs
src/retrieval/: mod.rs
src/tokenizer/: mod.rs
