[package]
name = "IndexerMcIndexFace"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
fst = { version = "0.4.7", features = ["levenshtein"] }
memmap = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
rand = "0.8.5"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.8"
num_cpus = "1.16.0"
indicatif = "0.17.7"
random_word = { version = "0.4.2", features = ["en"] }
